# pow-buster

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  FUTURE.md  MOTIVATION.md  README.md  bench_blake3.txt  build.rs  build_wasm.sh  deny.toml  time.txt  time_sha-ni.txt
.github/workflows/: ci.yml
benches/: bench_blake3.rs  bench_go_to_social.rs  bench_proof.rs  bench_strings.rs
browser-addon/: content_script.js  manifest.json  rules.json
browser-addon/background/: index.html  script.js  worker.js
browser-addon/options/: index.html  script.js  style.css
emails/: xeiaso.091925.eml
logs/: time.txt
plots/: pixi.toml  plot.R
src/: adapter.rs  blake3.rs  client.rs  lib.rs  local_macros.rs  main.rs  message.rs  safe.rs  server.rs  sha256.rs  sha256.wgsl  solver.rs  strings.rs  wasm_ffi.rs  wgpu.rs
src/adapter/: anubis.rs  capjs.rs  cerberus.rs  goaway.rs  mcaptcha.rs
src/blake3/: avx2.rs  avx512.rs  loop_macros.rs  simd128.rs
src/sha256/: avx512.rs  sha_ni.rs  simd128.rs
src/solver/: avx2.rs  avx512.rs  impl_decimal_solver.rs  safe.rs  sha_ni.rs  simd128.rs
src/solver/tests/: pow_sha256.rs
src/static/: index.html  worker.js
