[package]
name = "simd-mcaptcha"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = { version = "0.10", default-features = false, features = ["compress"] }
cfg-if = "1.0"

wasm-bindgen = { version = "0.2", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls", "gzip"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "net", "macros"], optional = true }
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.17", optional = true }
thiserror = { version = "2", optional = true }
scraper = { version = "0.24", optional = true }
url = { version = "2.5", optional = true }
axum = { version = "0.8", features = ["http2"], optional = true }
tower-http = { version = "0.6.6", features = ["catch-panic", "timeout", "trace", "limit"], optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
tracing = { version = "0.1.41", optional = true }
axum-extra = { version = "0.10.1", features = ["typed-header"], optional = true }
headers = { version = "0.4", optional = true }
rust-embed = { version = "8.7", optional = true, features = ["mime-guess"] }

[profile.release]
opt-level = 3
panic = "abort"

[profile.release-unwinding]
inherits = "release"
panic = "unwind"

[dev-dependencies]
bincode = "1.3"
pow_sha256 = { git = "https://github.com/mcaptcha/pow_sha256", tag = "0.3.1" }
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support", "plotters", "html_reports"]}   
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

[[bench]]
name = "bench_proof"
harness = false

[features]
default = ["std", "all-lane-positions"]
alloc = []
std = ["alloc"]
compare-64bit = []
adapter = ["alloc", "dep:serde", "dep:serde_json"]
wasm-bindgen = ["adapter", "dep:wasm-bindgen"]
client = ["std", "adapter", "rayon", "tokio", "tokio/rt-multi-thread", "dep:url", "dep:reqwest", "dep:thiserror", "dep:num_cpus", "dep:scraper"]
live-throughput-test = ["client"]
cli = ["std", "dep:clap", "rayon", "dep:num_cpus"]
tokio = ["std", "dep:tokio"]
rayon = ["std", "dep:rayon"]
server = ["adapter", "tokio", "tracing", "dep:rayon", "dep:thiserror", "dep:url", "dep:axum", "dep:tower-http", "dep:tracing-subscriber", "dep:axum-extra", "dep:headers"]
tracing = ["dep:tracing"]
all-lane-positions = [
    "lane-position-0",
    "lane-position-1",
    "lane-position-2",
    "lane-position-3",
    "lane-position-4",
    "lane-position-5",
    "lane-position-6",
    "lane-position-7",
    "lane-position-8",
    "lane-position-9",
    "lane-position-10",
    "lane-position-11",
    "lane-position-12",
    "lane-position-13",
    "lane-position-14",
    "lane-position-15"
]
lane-position-0 = []
lane-position-1 = []
lane-position-2 = []
lane-position-3 = []
lane-position-4 = []
lane-position-5 = []
lane-position-6 = []
lane-position-7 = []
lane-position-8 = []
lane-position-9 = []
lane-position-10 = []
lane-position-11 = []
lane-position-12 = []
lane-position-13 = []
lane-position-14 = []
lane-position-15 = []
server-wasm = ["server", "dep:rust-embed"]
ignore-target-feature-checks = []

[[bin]]
name = "simd-mcaptcha"
path = "src/main.rs"
required-features = ["cli"]
