[package]
name = "pow-buster"
description = "SIMD accelerated solver for mCaptcha/Anubis/Cerberus/go-away/Cap.js PoW challenges, features comprehensive coverage for Anubis challenge workflow."
license = "Apache-2.0"
repository = "https://github.com/eternal-flame-AD/pow-buster"
categories = ["cryptography"]
keywords = ["sha-2", "captcha", "proof-of-work", "mining"]
authors = ["Yumechi <yume@yumechi.jp>"]
version = "0.2.0"
edition = "2024"
exclude = ["/browser-addon", "/logs", "/emails", "/.vscode"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
sha2 = { version = "0.10", default-features = false, features = ["compress"] }
blake3 = { version = "1.8", default-features = false }

clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls", "gzip"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "net", "macros"], optional = true }
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.17", optional = true }
thiserror = { version = "2", optional = true }
scraper = { version = "0.24", optional = true }
url = { version = "2.5", optional = true }
axum = { version = "0.8", features = ["http2"], optional = true }
tower-http = { version = "0.6.6", features = ["catch-panic", "timeout", "trace", "limit"], optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
tracing = { version = "0.1.41", optional = true }
axum-extra = { version = "0.10.1", features = ["typed-header"], optional = true }
headers = { version = "0.4", optional = true }
rust-embed = { version = "8.7", optional = true, features = ["mime-guess"] }
semver = { version = "1.0", default-features = false, optional = true }
generic-array = { version = "=0.14.7" } # TODO: remove this pin once RustCrypt migrate off of it

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3

[target.'cfg(target_arch = "x86")'.dependencies]
cpufeatures = { version = "0.2", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = { version = "0.2", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-simd"]

[dev-dependencies]
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support", "plotters", "html_reports"]}   
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
num_cpus = { version = "1.17" }

[[bench]]
name = "bench_proof"
harness = false

[[bench]]
name = "bench_blake3"
harness = false

[[bench]]
name = "bench_strings"
harness = false
required-features = ["internals"]

[features]
default = ["std", "runtime-dispatch"]
runtime-dispatch = []
alloc = []
std = ["alloc"]
compare-64bit = []
adapter = ["alloc", "dep:serde", "dep:serde_json", "dep:semver", "semver/serde"]
client = ["std", "adapter", "rayon", "tokio", "tokio/rt-multi-thread", "dep:url", "dep:reqwest", "dep:thiserror", "dep:num_cpus", "dep:scraper"]
live-throughput-test = ["client"]
cli = ["std", "dep:clap", "rayon", "dep:num_cpus"]
tokio = ["std", "dep:tokio"]
rayon = ["std", "dep:rayon"]
server = ["adapter", "tokio", "dep:rayon", "dep:thiserror", "dep:url", "dep:axum", "dep:tower-http", "tracing-subscriber", "dep:axum-extra", "dep:headers"]
tracing = ["dep:tracing"]
tracing-subscriber = ["dep:tracing-subscriber", "tracing"]
internals = []
server-wasm = ["server", "dep:rust-embed"]

[[bin]]
name = "pow-buster"
path = "src/main.rs"
required-features = ["cli"]
